--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -25,7 +25,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url(../public/Bg-Hero_section.png);
+  background-image: url(/Bg-Hero_section.png);
   background-size: cover;
   filter: brightness(0.7) contrast(0.8);
   pointer-events: none;
