--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -103,21 +103,31 @@
   gap: 0.5rem;
   padding: 0.75rem 0.5rem;
   background: var(--theme-surface);
-  border: 2px solid var(--accent-primary);
-  border-radius: 1rem;
+  border-bottom: 2px solid var(--accent-primary); 
+  border-radius: 4px;
   cursor: pointer;
   transition: all var(--transition-smooth);
 }
 
 .category-item:hover {
-  transform: translateY(-5px);
-  box-shadow:
+  transform: translateY(-2px);
+  /* box-shadow:
     inset -1px -2px 8px rgba(255, 255, 255, 0.2),
-    inset 8px 10px 8px rgba(0, 0, 0, 0.8);
+    inset 8px 10px 8px rgba(0, 0, 0, 0.8); */
   /* box-shadow: 0 4px 12px var(--accent-glow),
     inset -1px -2px 8px rgba(255, 255, 255, 0.2),
     inset 8px 10px 8px rgba(0, 0, 0, 0.8); */
+    box-shadow:
+    -1px -2px 8px rgba(255, 255, 255, 0.2),
+    8px 10px 8px rgba(0, 0, 0, 0.8);
 }
+
+.category-item:active{
+  box-shadow:
+    inset -1px -2px 8px rgba(255, 255, 255, 0.2),
+    inset 8px 10px 8px rgba(0, 0, 0, 0.8);
+}
+
 .category-icon-wrapper {
   width: 36px;
   height: 36px;
@@ -144,13 +154,6 @@
   gap: 1rem;
   margin-top: 1rem;
 }
-
-
-
-
-
-
-
 
 .hero-image {
   position: relative;
